--- a/css/styles.css
+++ b/css/styles.css
@@ -2,9 +2,108 @@
 @import url('https://fonts.googleapis.com/css2?family=Libre+Baskerville&display=swap');
 
 body {
-    background-color:whitesmoke;
+    background-color:rgb(253,247,242);
     font-family: 'Libre Baskerville', serif;
+    background-attachment: fixed;
+    background-repeat: no-repeat;
+    height: 100%;
+    margin: 0 auto;
+    justify-items: center;
+    display: flex;
 }
+
+
+.container {
+    background-color:rgb(253,247,242);
+    align-items: center;
+    margin: 0 auto;
+    margin-top: 30px;
+    margin-bottom: 30px;
+    padding: 10px 50px 50px 50px;
+    display: grid;
+    justify-items: center;
+    flex-direction: column;
+}
+
 h1 {
     font-family: 'Playfair Display', serif;
+    font-size: 5em;
+    color: rgb(255,87,87);
+}
+
+h2 {
+    font-family: 'Playfair Display', serif;
+    font-size: 2.0em;
+}
+
+.navbar {
+    padding: 10px 10px 10px 10px;
+    font-size: 1.5em;
+    background-color: rgb(253,247,242);
+}
+
+.responsive {
+    width: 100%;
+    height: auto;
+}
+
+/* responsive media queries */
+@media screen and (min-width: 300px) {
+    h1 {
+        font-size: 2.0em;
+    }
+    h2 {
+        font-size: 0.60em;
+    }
+    .navbar {
+        font-size: 0.40em;
+    }
+}
+
+@media screen and (min-width: 350px) {
+    h1 {
+        font-size: 2.5em;
+    }
+    h2 {
+        font-size: 0.80em;
+    }
+    .navbar {
+        font-size: 0.60em;
+    }
+}
+
+@media screen and (min-width: 550px) {
+    h1 {
+        font-size: 3.0em;
+    }
+    h2 {
+        font-size: 1.0em;
+    }
+    .navbar {
+        font-size: 0.80em;
+    }
+}
+
+@media screen and (min-width: 750px) {
+    h1 {
+        font-size: 3.5em;
+    }
+    h2 {
+        font-size: 1.2em;
+    }
+    .navbar {
+        font-size: 1em;
+    }
+}
+
+@media screen and (min-width: 950px) {
+    h1 {
+        font-size: 4.em;
+    }
+    h2 {
+        font-size: 1.5em;
+    }
+    .navbar {
+        font-size: 1.3em;
+    }
 }
