--- a/css/styles.css
+++ b/css/styles.css
@@ -1,109 +1,112 @@
-@import url('https://fonts.googleapis.com/css2?family=Playfair+Display&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Libre+Baskerville&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Fleur+De+Leah&display=swap');
+
+@import url('https://fonts.googleapis.com/css2?family=Lato:ital,wght@1,300&display=swap');
 
 body {
-    background-color:rgb(253,247,242);
-    font-family: 'Libre Baskerville', serif;
-    background-attachment: fixed;
-    background-repeat: no-repeat;
-    height: 100%;
-    margin: 0 auto;
-    justify-items: center;
-    display: flex;
-}
-
-
-.container {
-    background-color:rgb(253,247,242);
-    align-items: center;
-    margin: 0 auto;
-    margin-top: 30px;
-    margin-bottom: 30px;
-    padding: 10px 50px 50px 50px;
-    display: grid;
-    justify-items: center;
-    flex-direction: column;
+    background-color: #F8EFEF;
+    font-family: 'Bodoni Moda', serif;
+    font-size: 1.3em;
+    color: #ffffff;
 }
 
 h1 {
-    font-family: 'Playfair Display', serif;
-    font-size: 5em;
-    color: rgb(228,153,70);
+    font-size: 7em;
+    font-family: 'Fleur De Leah', cursive;
+    color: #5D4030;
+    margin-top: 100px;
+    margin-bottom: 30px;
 }
 
 h2 {
-    font-family: 'Playfair Display', serif;
-    font-size: 2.0em;
+    font-size: 2em;
+    font-family: 'Lato', sans-serif;
+    color: #ffffff;
 }
 
-.navbar {
-    padding: 10px 10px 10px 10px;
-    font-size: 1.5em;
-    background-color: rgb(253,247,242);
+h3 {
+    font-size: 7em;
+    font-family: 'Fleur De Leah', cursive;
+    color: #ffffff;
+    margin-top: 30px;
+    margin-bottom: 30px;
 }
 
-.responsive {
-    width: 100%;
-    height: auto;
+.container {
+    background-color: transparent;
+    border: 2px solid transparent;
 }
 
-/* responsive media queries */
-@media screen and (min-width: 300px) {
+.container {
+    flex-wrap: wrap;
+    align-items: center;
+}
+
+.col-sm {
+    align-items: center;
+}
+
+.row {
+    align-items: center;
+}
+
+.jumbotron-2 {
+    background-color: #FF914D;
+}
+
+@media only screen and (max-width: 400px) {
     h1 {
-        font-size: 2.0em;
+        font-size: 2em;
     }
-    h2 {
-        font-size: 0.60em;
-    }
-    .navbar {
-        font-size: 0.40em;
+  }
+
+@media only screen and (max-width: 600px) {
+    h1 {
+        font-size: 3em;
     }
 }
 
-@media screen and (min-width: 350px) {
+@media only screen and (max-width: 800px) {
     h1 {
-        font-size: 2.5em;
-    }
-    h2 {
-        font-size: 0.80em;
-    }
-    .navbar {
-        font-size: 0.60em;
+        font-size: 4em;
     }
 }
 
-@media screen and (min-width: 550px) {
-    h1 {
-        font-size: 3.0em;
-    }
-    h2 {
-        font-size: 1.0em;
-    }
-    .navbar {
-        font-size: 0.80em;
-    }
-}
+ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+  }
+  
+  li {
+    display: inline;
+    padding: 20px;
+  }
+  
+  nav {
+    background-color: #FF914D;
+    color: #ffffff;
+    font-size: 2em;
+    font-family: 'Bodoni Moda', serif;
+  }
+  
+  /* unvisited link */
+  a:link {
+    color:white;
+    text-decoration: none;
+  }
+  
+  a:visited {
+    color: white;
+  }
+  
+  /* mouse over link */
+  a:hover {
+    color: #Ffffff;
+  }
+  
+  /* selected link*/
+  a:active {
+    color: black;
+  }
+  
 
-@media screen and (min-width: 750px) {
-    h1 {
-        font-size: 3.5em;
-    }
-    h2 {
-        font-size: 1.2em;
-    }
-    .navbar {
-        font-size: 1em;
-    }
-}
-
-@media screen and (min-width: 950px) {
-    h1 {
-        font-size: 4.em;
-    }
-    h2 {
-        font-size: 1.5em;
-    }
-    .navbar {
-        font-size: 1.3em;
-    }
-}
