update media query

--- a/css/styles.css
+++ b/css/styles.css
@@ -56,6 +56,15 @@ h3 {
 }
 
 /* Screen size responsiveness */
+@media only screen and (max-width: 300px) {
+  h1 {
+      font-size: 0.5em;
+  }
+  nav {
+    font-size: 0.2em;
+  }
+}
+
 @media only screen and (max-width: 400px) {
     h1 {
         font-size: 1em;
